Add support for multiple global scopes in animation worklets.

* Creates 2 global scopes to facilitate enforcement of statelessness of non-stateful animations.
* Defaults to stateful to reduce potential impact on existing worklets.
* Separates logic for creating/removing animators from mutator updates.
* Switch stateless global scope in a round-robin fashion after N mutation where N is rand in [1, 10))
* Update test expectations to reflect that some tests produce duplicate output (i.e. output for each global scope).

Bug: 914918
Change-Id: If74eca7585a55ff4483f53572492e68db526ccb4
Reviewed-on: https://chromium-review.googlesource.com/c/1409844
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Reviewed-by: Majid Valipour <majidvp@chromium.org>
Commit-Queue: Kevin Ellis <kevers@chromium.org>
Cr-Commit-Position: refs/heads/master@{#627017}
Former-commit-id: 211c9368370ed87a90996daa1f6ca532b6d662ed