third_party/blink/renderer/modules/animationworklet/animation_worklet.h
@@ -6,6 +6,7 @@
 #define THIRD_PARTY_BLINK_RENDERER_MODULES_ANIMATIONWORKLET_ANIMATION_WORKLET_H_
 
 #include "third_party/blink/renderer/core/workers/worklet.h"
+#include "third_party/blink/renderer/modules/animationworklet/animation_worklet_proxy_client.h"
 #include "third_party/blink/renderer/modules/modules_export.h"
 #include "third_party/blink/renderer/platform/graphics/animation_worklet_mutators_state.h"
 #include "third_party/blink/renderer/platform/heap/handle.h"
@@ -38,6 +39,8 @@ class MODULES_EXPORT AnimationWorklet final : public Worklet {
   // Implements Worklet.
   bool NeedsToCreateGlobalScope() final;
   WorkletGlobalScopeProxy* CreateGlobalScope() final;
+
+  Member<AnimationWorkletProxyClient> proxy_client_;
 };
 
 }  // namespace blink
