third_party/blink/web_tests/animations/animationworklet/resources/animation-worklet-tests.js
@@ -54,4 +54,3 @@ function runAnimationWorkletTests() {
 
   runTests(testcases);
 }
-
